--- a/wiki/threads/3627.md
+++ b/wiki/threads/3627.md
@@ -1,5 +1,5 @@
 # COD Zombies in Spaceland .obj map help :]
-Call of Duty: Black Ops 3 | Models & Animation
+Game Modding | Call of Duty: Black Ops 3 | Models & Animation
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Bocy</span></span>:</strong>
