--- a/wiki/threads/3709.md
+++ b/wiki/threads/3709.md
@@ -1,5 +1,5 @@
 # Error: tot_faces == triCount ??
-Call of Duty: Black Ops 3 | Radiant
+Game Modding | Call of Duty: Black Ops 3 | Radiant
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">bubba443</span></span>:</strong>
