--- a/wiki/threads/3838.md
+++ b/wiki/threads/3838.md
@@ -1,5 +1,5 @@
 # New weapons have weird animations and are floating
-Call of Duty: Black Ops 3 | Radiant
+Game Modding | Call of Duty: Black Ops 3 | Radiant
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Dejo505</span></span>:</strong>
