--- a/wiki/threads/3843.md
+++ b/wiki/threads/3843.md
@@ -1,5 +1,5 @@
 # "Frosty Extractor and other tool like" Are we able to extract and convert animations from BF stuff ?
-Call of Duty: Black Ops 3 | Models & Animation
+Game Modding | Call of Duty: Black Ops 3 | Models & Animation
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">altTino</span></span>:</strong>
