--- a/wiki/threads/3846.md
+++ b/wiki/threads/3846.md
@@ -1,5 +1,5 @@
 # Logical's Perk Pack & Madgaz's PerkStandaloneV1_3 Pack bug
-Call of Duty: Black Ops 3 | Asset Importing
+Game Modding | Call of Duty: Black Ops 3 | Asset Importing
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">THAN0S</span></span>:</strong>
