--- a/wiki/threads/3847.md
+++ b/wiki/threads/3847.md
@@ -1,5 +1,5 @@
 # Turn Prefab/Map file into XModel
-Call of Duty: Black Ops 3 | Models & Animation
+Game Modding | Call of Duty: Black Ops 3 | Models & Animation
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Fanatic</span></span>:</strong>
